docs: polishing some of the docs

--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run check",
-    "internal-deploy": "cp $INTENAL_ENV_PATH .env && gcloud app deploy --project $INTERNAL_PROJECT",
-    "external-deploy": "cp $EXTERNAL_ENV_PATH .env && gcloud app deploy --project $EXTERNAL_PROJECT",
+    "internal-deploy": "cp config/internal.env .env && source .env && gcloud app deploy --project $PROJECT",
+    "external-deploy": "cp config/external.env .env && source .env && gcloud app deploy --project $PROJECT",
     "deploy": "npm run compile && npm run internal-deploy && npm run external-deploy",
-    "create-indexes": "gcloud --project $GCLOUD_PROJECT datastore indexes create ./index.yaml",
+    "create-indexes": "gcloud --project $PROJECT datastore indexes create ./index.yaml",
     "docs-test": "echo 'add doc tests'",
-    "samples-test": "echo 'n/a'",
-    "system-test": "echo 'n/a'"
+    "samples-test": "echo 'add samples test'",
+    "system-test": "echo 'add system test'"
   },
   "keywords": [],
   "author": "Google LLC",
