chore: add stubbed documentation.md

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint": "gts check && eslint .",
     "fix": "gts fix && eslint . --fix",
     "clean": "gts clean",
-    "compile": "tsc -p . && cp src/lib/*.js build/src/lib/",
-    "//docs": "marked ./documentation.md -o html/documentation.html",
+    "compile": "tsc -p . && npm run docs && cp src/lib/*.js build/src/lib/",
+    "docs": "marked ./documentation.md -o html/documentation.html",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run check",
