--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node -r source-map-support/register build/src/server.js",
     "start-local": "cp local.env ./.env && npm run compile &&  npm start",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "c8 mocha --recursive build/test/",
     "lint": "gts check && eslint .",
     "fix": "gts fix && eslint . --fix",
     "clean": "gts clean",
@@ -16,7 +16,7 @@
     "docs": "marked ./documentation.md -o html/documentation.html",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run check",
+    "posttest": "npm run lint",
     "internal-deploy": "cp config/internal.env .env && gcloud app deploy app-internal.yaml --project $GCLOUD_PROJECT",
     "external-deploy": "cp config/external.env .env && gcloud app deploy app-external.yaml --project $GCLOUD_PROJECT",
     "deploy": "npm run compile && npm run internal-deploy && npm run external-deploy",
@@ -29,11 +29,16 @@
   "author": "Google LLC",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/chai": "^4.2.7",
     "@types/cookie-session": "^2.0.36",
     "@types/express": "^4.16.0",
+    "@types/mocha": "^5.2.7",
     "@types/morgan": "^1.7.35",
+    "@types/nock": "^11.1.0",
     "@types/request": "^2.48.1",
     "@types/uuid": "^3.4.4",
+    "c8": "^6.0.1",
+    "chai": "^4.2.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-node": "^10.0.0",
@@ -41,6 +46,7 @@
     "gts": "^0.9.0",
     "marked": "^0.7.0",
     "mocha": "^5.2.0",
+    "nock": "^11.7.0",
     "prettier": "^1.19.1",
     "typescript": "^3.5.3"
   },
