--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "node -r source-map-support/register build/src/server.js",
     "develop": "cp config/local.env ./.env && npm run compile && npm start",
     "test": "c8 mocha --recursive build/test/",
-    "lint": "gts check && eslint . && prettier -c **/*.md README.md documentation.md",
-    "fix": "gts fix && eslint . --fix && prettier --write **/*.md README.md documentation.md",
+    "lint": "gts check && eslint . && npm run lint-html",
+    "lint-html": "prettier -c  **/*.{md,html,css} *.{md,html,css} !CONTRIBUTING.md !CODE_OF_CONDUCT.md !html/documentation.html !html/changelog.html",
+    "fix": "gts fix && eslint . --fix && npm run fix-html",
+    "fix-html": "prettier --write **/*.{md,html,css} *.{md,html,css} !CONTRIBUTING.md !CODE_OF_CONDUCT.md !html/documentation.html !html/changelog.html",
     "clean": "gts clean",
     "compile": "tsc -p . && npm run docs && cp src/lib/*.js build/src/lib/",
     "docs": "marked ./documentation.md -o html/documentation.html",
