docs: continue to flesh out README.md/other docs, add back documentation.md (#11)

--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node -r source-map-support/register build/src/server.js",
-    "start-local": "cp local.env ./.env && npm run compile &&  npm start",
+    "develop": "cp config/local.env ./.env && npm run compile && npm start",
     "test": "c8 mocha --recursive build/test/",
-    "lint": "gts check && eslint .",
-    "fix": "gts fix && eslint . --fix",
+    "lint": "gts check && eslint . && npm run lint-html",
+    "lint-html": "prettier -c  **/*.{md,html,css} *.{md,html,css} !CONTRIBUTING.md !CHANGELOG.md !CODE_OF_CONDUCT.md !html/documentation.html !html/changelog.html",
+    "fix": "gts fix && eslint . --fix && npm run fix-html",
+    "fix-html": "prettier --write **/*.{md,html,css} *.{md,html,css} !CONTRIBUTING.md !CHANGELOG.md !CODE_OF_CONDUCT.md !html/documentation.html !html/changelog.html",
     "clean": "gts clean",
     "compile": "tsc -p . && npm run docs && cp src/lib/*.js build/src/lib/",
-    "docs": "marked ./documentation.md -o html/documentation.html",
+    "docs": "marked ./documentation.md -o html/documentation.html && marked ./CHANGELOG.md -o html/changelog.html",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run lint",
