--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "develop": "cp config/local.env ./.env && npm run compile && npm start",
     "test": "cross-env NODE_ENV=test c8 mocha --recursive build/test/",
     "lint": "gts check && eslint . && npm run lint-html",
-    "lint-html": "prettier -c  **/*.{md,html,css} *.{md,html,css} !CONTRIBUTING.md !CHANGELOG.md !CODE_OF_CONDUCT.md !html/documentation.html !html/changelog.html",
+    "lint-html": "prettier -c  **/*.{md,html,css} *.{md,html,css}",
     "fix": "gts fix && eslint . --fix && npm run fix-html",
     "fix-html": "prettier --write **/*.{md,html,css} *.{md,html,css} !CONTRIBUTING.md !CHANGELOG.md !CODE_OF_CONDUCT.md !html/documentation.html !html/changelog.html",
     "clean": "gts clean",
@@ -18,7 +18,6 @@
     "docs": "marked ./documentation.md -o html/documentation.html && marked ./CHANGELOG.md -o html/changelog.html",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run lint",
     "internal-deploy": "cp config/internal.env .env && gcloud app deploy app-internal.yaml --project $GCLOUD_PROJECT",
     "external-deploy": "cp config/external.env .env && gcloud app deploy app-external.yaml --project $GCLOUD_PROJECT",
     "deploy": "npm run compile && npm run internal-deploy && npm run external-deploy",
