build: add github actions (#32)

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,7 @@
-node_modules/*
-samples/node_modules/*
-src/**/doc/*
+.coverage
+.github
+CONTRIBUTING.md
+CHANGELOG.md
+CODE_OF_CONDUCT.md
+html/documentation.html
+html/changelog.html
