--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "develop": "cp config/local.env ./.env && npm run compile && npm start",
     "test": "cross-env NODE_ENV=test c8 mocha --recursive build/test/",
     "lint": "gts check && eslint . && npm run lint-html",
-    "lint-html": "prettier -c  **/*.{md,html,css} *.{md,html,css} !CONTRIBUTING.md !CHANGELOG.md !CODE_OF_CONDUCT.md !html/documentation.html !html/changelog.html",
+    "lint-html": "prettier -c  **/*.{md,html,css} *.{md,html,css}",
     "fix": "gts fix && eslint . --fix && npm run fix-html",
     "fix-html": "prettier --write **/*.{md,html,css} *.{md,html,css} !CONTRIBUTING.md !CHANGELOG.md !CODE_OF_CONDUCT.md !html/documentation.html !html/changelog.html",
     "clean": "gts clean",
@@ -18,14 +18,11 @@
     "docs": "marked ./documentation.md -o html/documentation.html && marked ./CHANGELOG.md -o html/changelog.html",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run lint",
     "internal-deploy": "cp config/internal.env .env && gcloud app deploy app-internal.yaml --project $GCLOUD_PROJECT",
     "external-deploy": "cp config/external.env .env && gcloud app deploy app-external.yaml --project $GCLOUD_PROJECT",
     "deploy": "npm run compile && npm run internal-deploy && npm run external-deploy",
     "create-indexes": "gcloud --project $GCLOUD_PROJECT datastore indexes create ./index.yaml",
-    "docs-test": "echo 'add doc tests'",
-    "samples-test": "echo 'add samples test'",
-    "system-test": "echo 'add system test'"
+    "coverage": "c8 report --reporter=json && codecov -f coverage/*.json"
   },
   "keywords": [],
   "author": "Google LLC",
@@ -40,6 +37,7 @@
     "@types/uuid": "^3.4.4",
     "c8": "^7.0.0",
     "chai": "^4.2.0",
+    "codecov": "^3.6.1",
     "cross-env": "^6.0.3",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
