test: building framework for testing

--- a/.nycrc
+++ b/.nycrc
@@ -1,9 +1,9 @@
 {
-  "report-dir": "./.coverage",
   "reporter": ["text", "lcov"],
   "exclude": [
+    "**/html",
     "**/*-test",
-    "**/.coverage",
+    "**/coverage",
     "**/apis",
     "**/benchmark",
     "**/conformance",
