--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
   "dependencies": {
     "@google-cloud/datastore": "^5.0.3",
     "@npm/types": "^1.0.1",
-    "@otplib/core": "^12.0.0",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
@@ -62,6 +61,7 @@
     "is-uuid": "^1.0.2",
     "morgan": "^1.9.1",
     "octonode": "^0.9.5",
+    "otplib": "^10.0.1",
     "request": "^2.88.0",
     "source-map-support": "^0.5.9",
     "uuid": "^3.3.2",
