--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@google-cloud/datastore": "^5.0.3",
     "@npm/types": "^1.0.1",
+    "@otplib/preset-default": "^12.0.0",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
