refactor: use handlebars for views

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "lint": "gts check && eslint . && npm run lint-html",
     "lint-html": "prettier -c  **/*.{md,html,css} *.{md,html,css}",
     "fix": "gts fix && eslint . --fix && npm run fix-html",
-    "fix-html": "prettier --write **/*.{md,html,css} *.{md,html,css} !CONTRIBUTING.md !CHANGELOG.md !CODE_OF_CONDUCT.md !html/documentation.html !html/changelog.html",
+    "fix-html": "prettier --write **/*.{md,html,css} *.{md,html,css}",
     "clean": "gts clean",
     "compile": "tsc -p . && npm run docs && cp src/lib/*.js build/src/lib/",
-    "docs": "marked ./documentation.md -o html/documentation.html && marked ./CHANGELOG.md -o html/changelog.html",
+    "docs": "marked ./documentation.md -o views/partials/documentation.hbs && marked ./CHANGELOG.md -o views/partials/changelog.hbs",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "internal-deploy": "cp config/internal.env .env && gcloud app deploy app-internal.yaml --project $GCLOUD_PROJECT",
@@ -31,6 +31,7 @@
     "@types/chai": "^4.2.7",
     "@types/cookie-session": "^2.0.36",
     "@types/express": "^4.16.0",
+    "@types/express-handlebars": "^3.1.0",
     "@types/mocha": "^5.2.7",
     "@types/morgan": "^1.7.35",
     "@types/request": "^2.48.1",
@@ -57,7 +58,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
-    "github-markdown-css": "^3.0.0",
+    "express-handlebars": "^3.1.0",
     "github-url-from-git": "^1.5.0",
     "is-uuid": "^1.0.2",
     "morgan": "^1.9.1",
