--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "fix": "gts fix && eslint . --fix && npm run fix-html",
     "fix-html": "prettier --write **/*.{md,html,css} *.{md,html,css}",
     "clean": "gts clean",
-    "compile": "tsc -p . && npm run docs && cp src/lib/*.js build/src/lib/",
+    "compile": "tsc -p . && npm run docs && cp src/lib/*.js build/src/lib/ && cp node_modules/github-markdown-css/github-markdown.css public/",
     "docs": "marked ./documentation.md -o views/partials/documentation.hbs && marked ./CHANGELOG.md -o views/partials/changelog.hbs",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
@@ -44,6 +44,7 @@
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "github-markdown-css": "^3.0.1",
     "gts": "^1.0.0",
     "marked": "^0.8.0",
     "mocha": "^7.0.0",
