refactor: update headers, organize imports, etc

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "fix": "gts fix && eslint . --fix && npm run fix-html",
     "fix-html": "prettier --write **/*.{md,html,css} *.{md,html,css}",
     "clean": "gts clean",
-    "compile": "tsc -p . && npm run docs && cp src/lib/*.js build/src/lib/ && cp node_modules/github-markdown-css/github-markdown.css public/",
+    "compile": "tsc -p . && npm run docs && cp node_modules/github-markdown-css/github-markdown.css public/",
     "docs": "marked ./documentation.md -o views/partials/documentation.hbs && marked ./CHANGELOG.md -o views/partials/changelog.hbs",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
@@ -36,6 +36,7 @@
     "@types/morgan": "^1.7.35",
     "@types/request": "^2.48.1",
     "@types/uuid": "^3.4.4",
+    "@types/validate-npm-package-name": "^3.0.0",
     "c8": "^7.0.0",
     "chai": "^4.2.0",
     "codecov": "^3.6.1",
