--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "version": "1.0.1",
   "description": "npm registry proxy designed to reduce the attack surface of npm publish",
   "main": "index.js",
+  "files": [
+    "public/",
+    "src/",
+    "views/"
+  ],
   "scripts": {
     "start": "node -r source-map-support/register build/src/server.js",
     "develop": "cp config/local.env ./.env && npm run compile && npm start",
     "test": "cross-env NODE_ENV=test c8 mocha --recursive build/test/",
-    "lint": "gts check && eslint . && npm run lint-html",
-    "lint-html": "prettier -c  **/*.{md,html,css} *.{md,html,css}",
-    "fix": "gts fix && eslint . --fix && npm run fix-html",
-    "fix-html": "prettier --write **/*.{md,html,css} *.{md,html,css}",
+    "lint": "gts check && npm run lint-html",
+    "lint-html": "prettier -c  **/*.{md,css} *.md",
+    "fix": "gts fix && npm run fix-html",
+    "fix-html": "prettier --write **/*.{md,css} *.md",
     "clean": "gts clean",
     "compile": "tsc -p . && npm run docs && cp node_modules/github-markdown-css/github-markdown.css public/",
     "docs": "marked ./documentation.md -o views/partials/documentation.hbs && marked ./CHANGELOG.md -o views/partials/changelog.hbs",
@@ -32,6 +37,8 @@
     "@types/cookie-session": "^2.0.36",
     "@types/express": "^4.16.0",
     "@types/express-handlebars": "^3.1.0",
+    "@types/github-url-from-git": "^1.5.0",
+    "@types/is-uuid": "^1.0.0",
     "@types/mocha": "^7.0.0",
     "@types/morgan": "^1.7.35",
     "@types/request": "^2.48.1",
@@ -41,17 +48,12 @@
     "chai": "^4.2.0",
     "codecov": "^3.6.5",
     "cross-env": "^7.0.0",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
     "github-markdown-css": "^4.0.0",
-    "gts": "^1.0.0",
+    "gts": "^2.0.0",
     "marked": "^0.8.0",
     "mocha": "^7.0.0",
     "nock": "^12.0.0",
-    "prettier": "^1.19.1",
-    "typescript": "^3.5.3"
+    "typescript": "^3.8.3"
   },
   "dependencies": {
     "@google-cloud/datastore": "^5.0.3",
