--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "wombat-dressing-room",
+  "name": "wombat-dressing-room-server",
   "repository": "googleapis/wombat-dressing-room",
   "version": "1.1.0",
   "description": "npm registry proxy designed to reduce the attack surface of npm publish",
@@ -11,22 +11,13 @@
     "views/"
   ],
   "scripts": {
-    "start": "NODE_ENV=--enable-source-maps node packages/server/build/src/server.js",
-    "develop": "cp config/local.env ./.env && npm run compile && npm start",
-    "precompile": "rimraf public/static",
-    "compile": "npm run compile-frontend && npm run compile-server",
-    "compile-frontend": "cd ./packages/app && npm run build && cp -r build/* ../../public",
-    "compile-server": "cd ./packages/server && npm run compile",
-    "test": "npm run test-server && npm run test-app",
-    "test-server": "cd ./packages/server && npm run test",
-    "test-app": "cd ./packages/app && npm run test",
-    "internal-deploy": "cp config/internal.env .env && gcloud app deploy app-internal.yaml --project $GCLOUD_PROJECT",
-    "external-deploy": "cp config/external.env .env && gcloud app deploy app-external.yaml --project $GCLOUD_PROJECT",
-    "deploy": "npm run compile && npm run internal-deploy && npm run external-deploy",
-    "create-indexes": "gcloud --project $GCLOUD_PROJECT datastore indexes create ./index.yaml",
-    "postinstall": "npm run install-app && npm run install-server",
-    "install-app": "cd packages/app && npm i",
-    "install-server": "cd packages/server && npm i"
+    "test": "cross-env NODE_ENV=test c8 --check-coverage mocha --recursive build/test/",
+    "lint": "gts check",
+    "fix": "gts fix",
+    "clean": "gts clean",
+    "compile": "tsc -p .",
+    "pretest": "npm run compile",
+    "posttest": "npm run lint"
   },
   "keywords": [],
   "author": "Google LLC",
@@ -45,14 +36,11 @@
     "@types/validate-npm-package-name": "^3.0.0",
     "c8": "^7.3.1",
     "chai": "^4.2.0",
-    "codecov": "^3.7.1",
     "cross-env": "^7.0.0",
-    "github-markdown-css": "^4.0.0",
     "gts": "^3.1.0",
     "marked": "^2.0.0",
     "mocha": "^9.1.3",
     "nock": "^13.0.0",
-    "rimraf": "^3.0.2",
     "typescript": "^4.0.0"
   },
   "dependencies": {
@@ -62,13 +50,13 @@
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
-    "express-handlebars": "^5.0.0",
     "github-url-from-git": "^1.5.0",
     "is-uuid": "^1.0.2",
     "morgan": "^1.9.1",
     "octonode": "^0.10.0",
     "otplib": "^12.0.0",
     "request": "^2.88.0",
+    "source-map-support": "^0.5.9",
     "uuid": "^8.0.0",
     "validate-npm-package-name": "^3.0.0"
   }
