--- a/packages/server/.nycrc
+++ b/packages/server/.nycrc
@@ -17,7 +17,8 @@
     "**/.jsdoc.js",
     "karma.conf.js",
     "webpack-tests.config.js",
-    "webpack.config.js"
+    "webpack.config.js",
+    ".prettierrc.js"
   ],
   "exclude-after-remap": false,
   "all": true,
