--- a/package.json
+++ b/package.json
@@ -30,46 +30,5 @@
   },
   "keywords": [],
   "author": "Google LLC",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "@types/chai": "^4.2.7",
-    "@types/cookie-session": "^2.0.36",
-    "@types/express": "^4.16.0",
-    "@types/express-handlebars": "^5.0.0",
-    "@types/github-url-from-git": "^1.5.0",
-    "@types/is-uuid": "^1.0.0",
-    "@types/mocha": "^9.0.0",
-    "@types/morgan": "^1.7.35",
-    "@types/request": "^2.48.1",
-    "@types/uuid": "^8.0.0",
-    "@types/validate-npm-package-name": "^3.0.0",
-    "c8": "^7.3.1",
-    "chai": "^4.2.0",
-    "codecov": "^3.7.1",
-    "cross-env": "^7.0.0",
-    "github-markdown-css": "^4.0.0",
-    "gts": "^3.1.0",
-    "marked": "^2.0.0",
-    "mocha": "^9.1.3",
-    "nock": "^13.0.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.0.0"
-  },
-  "dependencies": {
-    "@google-cloud/datastore": "^6.0.0",
-    "@npm/types": "^1.0.1",
-    "@otplib/preset-default": "^12.0.0",
-    "cookie-session": "^2.0.0-beta.3",
-    "dotenv": "^10.0.0",
-    "express": "^4.16.4",
-    "express-handlebars": "^5.0.0",
-    "github-url-from-git": "^1.5.0",
-    "is-uuid": "^1.0.2",
-    "morgan": "^1.9.1",
-    "octonode": "^0.10.0",
-    "otplib": "^12.0.0",
-    "request": "^2.88.0",
-    "uuid": "^8.0.0",
-    "validate-npm-package-name": "^3.0.0"
-  }
+  "license": "Apache-2.0"
 }
