--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
   },
   "keywords": [],
   "author": "Google LLC",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "rimraf": "^3.0.2"
+  }
 }
