--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,7 @@
     "@types/mocha": "^9.0.0",
     "@types/morgan": "^1.7.35",
     "@types/request": "^2.48.1",
+    "@types/sinon": "^10.0.6",
     "@types/uuid": "^8.0.0",
     "@types/validate-npm-package-name": "^3.0.0",
     "c8": "^7.3.1",
@@ -40,6 +41,7 @@
     "gts": "^3.1.0",
     "mocha": "^9.1.3",
     "nock": "^13.0.0",
+    "sinon": "^12.0.1",
     "typescript": "^4.0.0"
   },
   "dependencies": {
