--- a/app-external.yaml
+++ b/app-external.yaml
@@ -1,3 +1,6 @@
-runtime: nodejs12
+runtime: nodejs20
+automatic_scaling:
+  # A single instance can handle many concurrent requests due to Node.js's non-blocking I/O.
+  max_instances: 1
 # Optional service name:
 # service: external
