--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,7 @@
     "views/"
   ],
   "scripts": {
-    "test": "cross-env NODE_ENV=test c8 --check-coverage mocha --recursive build/test/",
+    "test": "cross-env NODE_ENV=test c8 --check-coverage mocha --require ts-node/register --recursive --extension ts test/",
     "lint": "gts check",
     "fix": "gts fix",
     "clean": "gts clean",
@@ -42,6 +42,7 @@
     "mocha": "^10.0.0",
     "nock": "^13.0.0",
     "sinon": "^15.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.0.0"
   },
   "dependencies": {
