--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "test": "npm run test-server && npm run test-app",
     "test-server": "cd ./packages/server && npm run test",
     "test-app": "cd ./packages/app && npm run test",
-    "internal-deploy": "cp config/internal.env .env && gcloud app deploy app-internal.yaml --project $GCLOUD_PROJECT",
-    "external-deploy": "cp config/external.env .env && gcloud app deploy app-external.yaml --project $GCLOUD_PROJECT",
+    "internal-deploy": "cp config/internal.env .env && gcloud app deploy app-internal.yaml --project $GCLOUD_PROJECT --no-promote --no-stop-previous-version",
+    "external-deploy": "cp config/external.env .env && gcloud app deploy app-external.yaml --project $GCLOUD_PROJECT --no-promote --no-stop-previous-version",
     "deploy": "npm run compile && npm run internal-deploy && npm run external-deploy",
     "create-indexes": "gcloud --project $GCLOUD_PROJECT datastore indexes create ./index.yaml",
     "postinstall": "npm run install-app && npm run install-server",
